--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <a routerLink="/" class="title nav-link">{{title}}</a>
   <a routerLink="/sources" class="nav-link">Sources</a>
   <a routerLink="/classify" class="nav-link">Classify</a>
+  <a routerLink="/categories" class="nav-link">Categories</a>
   <a routerLink="/rules" class="nav-link">Rules</a>
   <a routerLink="/breakdown" class="nav-link">Breakdown</a>
 </div>
