--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -3,6 +3,7 @@
       color: red;
       font-family: Arial, Helvetica, sans-serif;
       font-weight: lighter;
+      margin-top: 3em;
     }
     body {
       margin: 2em;
