--- a/src/app/source-detail/source-detail.component.html
+++ b/src/app/source-detail/source-detail.component.html
@@ -1,1 +1,4 @@
-{{source.name}}
+<div class="block">
+  <div class="block-header">{{source.name}} Details</div>
+  <div class="block-content">{{source.id}}</div>
+</div>
