--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,36 @@
   font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+.clear {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.header {
+  text-transform: uppercase;
+  background-color: #3388ee;
+  color: white;
+  padding: .5em 1em;
+  margin: 0;
+}
+
+.block {
+  border: 1px solid #ccc;
+  margin-right: 2em;
+}
+
+.block-header {
+  text-transform: uppercase;
+  background-color: #3388ee;
+  color: white;
+  padding: .5em 1em;
+  margin: 0;
+}
+
+.block-content {
+  padding: .5em 1em;
 }
