--- a/src/app/sources/sources.component.html
+++ b/src/app/sources/sources.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="sources && sources.length" class="block list">
   <div class="block-header">Sources</div>
   <div class="block-content">
-    <div class="source-block" (click)="onSelect(source)" *ngFor="let source of sources">
-      <div *ngIf="selectedSource === source" class="badge"></div>
+    <div class="source-block" [class.selected]="selectedSource === source" (click)="onSelect(source)" *ngFor="let source of sources">
       <div class="source-name">{{source.name}}</div>
     </div>
   </div>
